apply plugin: 'com.android.application'

android {
    compileSdkVersion 27
    buildToolsVersion '27.0.3'
    defaultConfig {
        applicationId "com.tang.trade.tang"
        minSdkVersion 19
        targetSdkVersion 27
        versionCode 401
        versionName "4.0.1"

        //useLibrary 'org.apache.http.legacy'
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        externalNativeBuild {
            cmake {
                cppFlags "-std=c++11 -frtti -fexceptions"
                arguments '-DANDROID_STL=c++_static'
            }
        }

        ndk {
            // 设置支持的SO库架构
            abiFilters 'armeabi','armeabi-v7a','arm64-v8a','x86','x86_64','mips','mips64'
        }
        multiDexEnabled true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }


    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }



//    configurations.all {
//        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
//            def requested = details.requested
//            if (requested.group == 'com.android.support') {
//                if (!requested.name.startsWith("multidex")) {
//                    details.useVersion '27.1.1'
//                }
//            }
//        }
//    }

//    android.applicationVariants.all { variant ->
//        variant.outputs.all {//这里是all，下面是根据自己的情况来定制
//            def date = new Date()
//            def formattedDate = date.format('yyyy-MM-dd_HH-mm')
//            def fileName
//            if (variant.buildType.name == "release") {
//                fileName = "borderless_release_V${defaultConfig.versionName}_${formattedDate}.apk"
//            } else if (variant.buildType.name == "debug") {
//                fileName = "borderless_debug_V${defaultConfig.versionName}_${formattedDate}.apk"
//            } else {
//                fileName = "borderless_beta_V${defaultConfig.versionName}_${formattedDate}.apk"
//            }
//            outputFileName = fileName
//        }
//    }

    signingConfigs {
        release {
            keyAlias 'key0'
            keyPassword '111111'
            storeFile file('../key.jks')
            storePassword '111111'
        }
    }

    buildTypes {
        debug {
            zipAlignEnabled false
            signingConfig signingConfigs.release

            buildConfigField 'String', 'URL_BORDERLESS', '"https://api.borderless.vip:1855/api/acceptance/"'
            buildConfigField 'String', 'Accptance_path', '"https://api.borderless.vip:1855/api/acceptance/"'
            buildConfigField 'String', 'STATIC_NODES', '"https://tap.borderless.vip:39685/config/static-nodes.json"'
            buildConfigField 'String', 'STATIC_NODES_400', '"https://tap.borderless.vip:39685/config/"'
            buildConfigField 'String', 'HTTP_BASE_URL', '"https://api2.borderless.vip:8443/v1/"'

            // 测试环境
//            buildConfigField 'String', 'URL_BORDERLESS', '"https://acc.borderless.vip:5557/api/acceptance/"'
//            buildConfigField 'String', 'Accptance_path', '"https://acc.borderless.vip:5557/api/acceptance/"'
//            buildConfigField 'String', 'STATIC_NODES', '"https://tap.borderless.vip:8087/static-nodes.json"'
//            buildConfigField 'String', 'STATIC_NODES_400', '"https://tap.borderless.vip:8087/"'
//            buildConfigField 'String', 'HTTP_BASE_URL', '"http://192.168.1.197:8091/borderless/v1/"'
        }

        release {
            minifyEnabled false
            zipAlignEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release

            buildConfigField 'String', 'URL_BORDERLESS', '"https://api.borderless.vip:1855/api/acceptance/"'
            buildConfigField 'String', 'Accptance_path', '"https://api.borderless.vip:1855/api/acceptance/"'
            buildConfigField 'String', 'STATIC_NODES', '"https://tap.borderless.vip:39685/config/static-nodes.json"'
            buildConfigField 'String', 'STATIC_NODES_400', '"https://tap.borderless.vip:39685/config/"'
            buildConfigField 'String', 'HTTP_BASE_URL', '"https://api2.borderless.vip:8443/v1/"'
        }
    }



    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
    }

    dexOptions {
        //让它不要对Lib做preDexing
        preDexLibraries false

        //执行DX命令是为其分配的最大堆内存，主要用来解决执行DX命令是内存不足的情况
        javaMaxHeapSize '4g'

        //执行DX开启的线程数，适当的线程数量可以提高编译速度
        threadCount 2

        //是否开启jumbo模式，有时方法数超过了65535，需要开启次模式才能编译成功
        jumboMode true
    }

    repositories {
        jcenter {
            url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
        }
    }

    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }
}

repositories {
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    //gradle
    implementation('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
        transitive = true
    }
    implementation project(':graphenej')
    implementation project(':framework')
    //蒲公英
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
    implementation 'com.android.support:support-v4:27.1.1'
    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
    implementation 'com.kevin:wraprecyclerview:1.0.6'
    implementation 'com.squareup.okio:okio:1.13.0'
    implementation 'com.lzy.net:okgo:3.0.4'
    implementation 'com.android.support:design:27.1.1'
    implementation 'com.android.support:cardview-v7:27.1.1'
    implementation 'com.google.code.gson:gson:2.8.0'
    implementation 'com.android.support:recyclerview-v7:27.1.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
    implementation 'com.madgag.spongycastle:core:1.51.0.0'
    compileOnly 'com.madgag.spongycastle:prov:1.51.0.0'
    implementation 'com.madgag.spongycastle:pkix:1.51.0.0'
    implementation 'com.madgag.spongycastle:pg:1.51.0.0'
    implementation 'com.android.support:multidex:1.0.3'
    //testimplementation 'junit:junit:4.12'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
    implementation 'com.jakewharton:butterknife:8.8.1'
    implementation 'com.github.bumptech.glide:glide:3.7.0'
    //    compile 'com.weigan:loopView:0.1.2'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
    /**
     * 阿里通信
     */
    implementation(name: 'IMCore-2.0.2', ext: 'aar')
    implementation(name: 'IMKit-2.0.2', ext: 'aar')
    implementation 'com.alibaba:fastjson:1.2.13'
    implementation('com.github.JakeWharton:ViewPagerIndicator:2.4.1', {
        exclude group: 'com.android.support'
    })
    //腾讯blugly
    implementation 'com.tencent.bugly:crashreport:2.6.6.1'
    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
    implementation 'com.hyman:flowlayout-lib:1.1.2'
    api 'android.arch.persistence.room:runtime:1.1.0'
    annotationProcessor 'android.arch.persistence.room:compiler:1.1.0'
    implementation project(':codeview')
}
